# Dailybildi

./: .dockerignore  .env.example  .gitignore  Dockerfile  MIGRATION_GUIDE.md  README.md  SETUP.md  TESTING_GUIDE.md  TODO  UNIVERSE_SYSTEM.md  cspell.json  dev-server.sh  docker-compose.yml  docker-entrypoint.sh  next.config.js  package-lock.json  package.json  test_placement.py
backend/: .env.example  .gitignore  pyproject.toml  pytest.ini  seed.py  seed_blocks.py  test_blocks.py
backend/app/: config.py  daily_selection.py  db.py  main.py  models.py  scheduler.py  schemas.py
backend/app/routes/: admin.py  auth.py  blocks.py  community.py  inventory.py  likes.py  universes.py  worlds.py
backend/app/services/: auth_service.py  block_loader.py  block_service.py  inventory_service.py  like_service.py  universe_service.py  world_service.py
backend/app/utils/: db_integrity.py  jwt.py  security.py
backend/data/daily_selections/: 2026-04-04.json
backend/tests/: __init__.py  conftest.py  test_blocks.py  test_distribution.py  test_duplicate_placement.py
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  router.js  style.css
prisma/: schema.prisma
public/: humans.txt  robots.txt  sitemap.xml
public/.well-known/: security.txt
src/: instrumentation.ts
src/app/: globals.css  layout.tsx  page.tsx
src/lib/: constants.ts  scheduler.ts
src/phaser/: PhaserGame.ts  config.ts
src/services/: AuthService.ts  BlockService.ts  InventoryService.ts  LikeService.ts  (+1 more)
(+78 files in other folders)
