[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dailybildi-backend"
version = "0.1.0"
description = "Dailybildi backend API"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "sqlalchemy==2.0.27",
    "pydantic==2.5.3",
    "python-dotenv==1.0.0",
    "pyjwt==2.12.1",
    "bcrypt==4.1.2",
    "apscheduler==3.10.4",
    "python-multipart==0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "httpx==0.25.2",
]
